--- a/0-index.html
+++ b/0-index.html
@@ -9,6 +9,8 @@
 <body>
     <div class="main-container">
         <div class="header">
+            <input type="checkbox" id="menu-toggle"/>
+            <label for="menu-toggle" class="menu-toggle">&#9776;</label>
             <div class="logo">
                 <a href="#"><img src="images/logo_headphones.png" alt=""></a>
             </div>
